fixed issue with overlapping divs

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -360,7 +360,6 @@ input:focus {
 
 .quote {
     transition: all 3s cubic-bezier(0.645, 0.045, 0.355, 1);
-    margin-bottom: 50px;
 }
 
 .quote p {
@@ -369,7 +368,7 @@ input:focus {
 }
 
 .quote.initial-size {
-    height: 100vh;
+    max-height: 90vh;
     padding: 20px;
     text-align: center;
     font-size: 30px;
@@ -381,7 +380,7 @@ input:focus {
 }
 
 .quote.smaller-size {
-    height: 30vh;
+    min-height: 30vh;
     padding: 20px 20px 50px 20px;
     text-align: center;
     font-size: 30px;
@@ -392,6 +391,7 @@ input:focus {
     padding-top: 20px;
     transition: all 1s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
+
 
 
 .trio {
